# air-handler

./: .gitignore  create_sensor_pkg.sh  readme.md  readme.txt
datasheets/: ISM330DLCTR.dae  LPS22HHTR.STEP  LPS22HHTR.dae  SP25.dae  SP25.step  fma-series-15-newton-cad-model.stp
docker/: Dockerfile  build_sim.sh  docker-compose.yml  entrypoint.sh  ros2_env.sh  run_sim.sh  setup.sh  validate_env.sh
ros2_ws/: run_sim.sh
ros2_ws/install/sensor_plugins/share/sensor_plugins/: package.bash  package.zsh
ros2_ws/log/: latest_build
ros2_ws/logs/: imu_data_20250711_180808.csv  imu_data_20250711_181013.csv  imu_data_20250711_181847.csv  imu_data_20250711_184534.csv  imu_data_20250711_191713.csv  imu_data_20250711_203635.csv
ros2_ws/src/force_plugin/: CMakeLists.txt  package.xml
ros2_ws/src/force_plugin/include/force_plugin/: force_plugin.hpp
ros2_ws/src/force_plugin/models/force_box/: model.config  model.sdf
ros2_ws/src/force_plugin/models/force_box/meshes/: FMAMSDXX015WC2C3.dae
ros2_ws/src/force_plugin/src/: force_plugin.cpp
ros2_ws/src/imu_plugin/: CMakeLists.txt  package.xml
ros2_ws/src/imu_plugin/include/imu_plugin/: imu_plugin.hpp
ros2_ws/src/imu_plugin/models/imu_box/: model.config  model.sdf
ros2_ws/src/imu_plugin/src/: imu_plugin.cpp
ros2_ws/src/sensor_plugins/: CMakeLists.txt  package.xml
ros2_ws/src/sensor_plugins/models/imu_sensor/: model.sdf
ros2_ws/src/sensor_plugins/src/: imu_plugin.cpp
ros2_ws/src/sensor_sim/: CMakeLists.txt  package.xml
ros2_ws/src/sensor_sim/launch/: all_test.launch.py  force_test.launch.py  imu_test.launch.py
ros2_ws/src/sensor_sim/worlds/: force_test.world  imu_test.world
ros2_ws/src/sensor_utils/: CMakeLists.txt  package.xml
ros2_ws/src/sensor_utils/include/sensor_utils/: noise_utils.hpp
ros2_ws/src/sensor_utils/src/: noise_utils.cpp
ros2_ws/src/test_world/: CMakeLists.txt  package.xml
ros2_ws/src/test_world/launch/: imu_test.launch.py
ros2_ws/src/test_world/worlds/: imu_test.world
ros2_ws/tools/: apply_force_node.py  force_socket_client.py  imu_socket_client.py
ros2_ws/tools/imu/: imu_socket_client.py  test_imu_socket.py
sensor_generator/: create_sensor_pkg.sh  utils.sh
sensor_generator/templates/: CMakeLists.txt.in  package.xml.in  plugin.cpp.in  plugin.hpp.in
sensor_generator/templates/launch/: launch.launch.py.in
sensor_generator/templates/model/: model.config.in  model.sdf.in
sensor_generator/templates/world/: test.world.in
