<?xml version="1.0"?>
<package format="3">
  <name>imu_plugin</name>
  <version>0.1.0</version>
  <description>Custom IMU plugin for Gazebo using ROS 2</description>

  <maintainer email="sebastian.tilaguy@gmail.com">Sebastian</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_dev</depend>
  <depend>sensor_utils</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
