<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sensor_plugins</name>
  <version>0.0.1</version>
  <description>Gazebo sensor plugins for ROS 2</description>
  
  <maintainer email="sebastian.tilaguy@windrobo.com">sebastian</maintainer>
  <license>Apache 2.0</license>

  <depend>rclcpp</depend>
  <depend>gazebo_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
</package>
