<?xml version="1.0"?>
<package format="3">
  <name>sensor_utils</name>
  <version>0.0.1</version>
  <description>Utility library for sensor preprocessing (noise, clipping, drift, hysteresis).</description>

  <maintainer email="tuemail@example.com">Sebastián</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
</package>
