<?xml version="1.0"?>
<package format="3">
  <name>test_world</name>
  <version>0.0.1</version>
  <description>World for testing the IMU plugin</description>

  <maintainer email="tuemail@example.com">Sebastián</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>gazebo_ros</exec_depend>
</package>
